schema/testdata/validation_operation_where_expression_unresolvable_lhs/schema.keel
model Profile {
    fields {
        identity Identity {
            @unique
        }
        username Text {
            @unique
        }
    }

    actions {
        get getProfile(username) {
            @where(profile.identit == ctx.identity)
        }
    }
}
