schema/testdata/errors/operation_where_forbidden_value_expression.keel
model Profile {
    fields {
        identity Identity @unique
        username Text @unique
    }

    actions {
        get getProfile(username) {
            //expect-error:20:36:AttributeExpressionError:expression expected to resolve to type Boolean but it is Identity
            @where(profile.identity)
        }
    }
}
